# adgw

./: .bazelignore  .bazelrc  .gitignore  BAZEL_GUIDE.md  BUILD  IMPLEMENTATION_PLAN.md  MIDDLEWARE_DESIGN.md  MODULE.bazel  PHASE1_SUMMARY.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  README.md  WORKSPACE  run_esmini_viz.sh  run_phase6_tests.sh  run_phase7_tests.sh  test_esmini_native.sh  test_integration.py  test_manual.sh  test_multicast.py  test_phase5.sh  test_protocol.py  test_udp_debug.py
apps/: README.md  middleware_protocol.py  test_acc.py
examples/: BUILD  esmini_demo.cpp  simple_demo.cpp
examples/acc_someip_service/: BUILD  CMakeLists.txt  README.md  commonapi_codegen.bzl  generate_code.sh
examples/acc_someip_service/config/: commonapi.ini  vsomeip.json
examples/acc_someip_service/fdepl/: accServices-someip.fdepl
examples/acc_someip_service/fidl/: accServices.fidl
examples/acc_someip_service/src/accServer/: accInputServiceStubImpl.cpp  accInputServiceStubImpl.hpp  accServerMain.cpp
middleware/: BUILD
middleware/core/: BUILD  middleware_engine.cpp  middleware_engine.h
middleware/data/: BUILD  control_command.h  scene_state.h  sensor_data.h  vehicle_state.h
middleware/ipc/: BUILD  ipc_interface.h  udp_adapter.cpp  udp_adapter.h
middleware/simulator/: BUILD  esmini_adapter.cpp  esmini_adapter.h  mock_simulator.cpp  mock_simulator.h  simulator_interface.h
middleware/utils/: BUILD  serialization.h
scenarios/: acc_test.xosc
scripts/: setup_esmini.sh
tests/: BUILD  size_report.cpp  test_data_structures.cpp  test_integration.cpp  test_middleware_engine.cpp  test_mock_simulator.cpp  test_performance.py  test_udp_adapter.cpp
